tests/NormalTests/paczka1/fuzzy1/14193312.err
Error in line 1: roMXGzwFC S52 54,9
Error in line 7: gInGaZpgVD4 S987 97,1
Error in line 10: xeCRkZKkb9g S52 68,5
Error in line 22: cjKY8kqQ S527 70,4
Error in line 11: xeCRkZKkb9g S987 37,2
Error in line 30: mjN368ZK S631 29,2
Error in line 32: mjN368ZK S52 14,0
